Changelog
=========

1.4 (unreleased)
----------------

- Update dev to Plone 4.3 and make tests runnable.
  [jaroel]


1.3.1 (2014-02-26)
------------------

- Modify available_expr of object_buttons/paste_alias action to not crash
  if the user doesn't have the permission to view the parent.
  [vincentfretin]


1.3 (2013-11-04)
----------------

- Remove plone.multilingual.interfaces.ITranslatable from Aliases.
  [jaroel]


1.2.4 (2013-10-22)
------------------

- Use Collection instead of Topic
  [jaroel]


1.2.3 (2013-09-25)
------------------

- Added MANIFEST.in
  Release 1.2 install failing.
  [thomasdesvenain]

- Adapt imports to Plone 4.3 compatibility
  [saily]


1.1 (2011-09-22)
----------------

- The upgrade profile clear and rebuild the zc.relation catalog to fix issues
  with interfaces that don't exist anymore.
  [vincentfretin]

- Localized package + french translation.
  [thomasdesvenain]

- Add 'paste as alias' action to folder buttons.
  [thomasdesvenain]

- Fixed type icon display. Use icon_expr.
  [thomasdesvenain]

- Add uuid to Alias objects and recatalog.
  This fixes duplicated UID with UUIDIndex on Plone 4.
  [vincentfretin]

- grok.CodeView doesn't exist anymore in recent five.grok, replaced by grok.View.
  [thomasdesvenain]

- Fix "AttributeError: 'Plone' object has no attribute 'prepareObjectTabs'" in
  Plone 4, disabling content views altogether.
  (Most notably, disabling the option to edit an Alias).
  [khink]


1.0a1 (2009-08-02)
------------------

- Initial release